Use correct wrapping and monospace font for execution's output (#879)
* use correct wrapping and monospace font for execution output

* set max-height for output content

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.execution-output {
+  white-space: break-spaces;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+  max-height: 300px;
+  overflow: auto;
+}
